--- a/APILaravel10/.env.example
+++ b/APILaravel10/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql-db
 DB_PORT=3306
-DB_DATABASE=teste_backend_adorei
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=adorei
+DB_USERNAME=adorei
+DB_PASSWORD=1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
