--- a/Dockerfile.laravel
+++ b/Dockerfile.laravel
@@ -18,8 +18,8 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 # RUN mv /usr/local/bin/composer /usr/local/bin/composer.phar
 # RUN echo 'alias composer="php -d memory_limit=-1 /usr/local/bin/composer.phar"' >> ~/.bashrc
 
-COPY setup.sh /usr/local/bin/setup.sh
-RUN chmod +x /usr/local/bin/setup.sh
+COPY setup.sh /var/www/html
+RUN chmod +x /var/www/html/setup.sh
 
 RUN a2enmod rewrite
 COPY apache-config.conf /etc/apache2/sites-available/000-default.conf
